--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Squntt - Live",
-  "version": "0.98.5.0",
+  "version": "0.98.5.1",
   "description": "Extension de Squntt pour être informé quand ça Stream sa mère",
   "icons": {
     "16": "assets/icons/squntt_icon16.png",
@@ -13,10 +13,7 @@
   "permissions": [
     "notifications",
     "storage",
-	"background",
-    "*://*.twitch.tv/*",
-    "*://*.youtube.com/*",
-    "*://twitter.com/*"
+	"background"
   ],
   "options_ui": {
     "page": "views/options/options.html"
