--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "squntt-live-notif",
   "displayName": "Squntt live notif",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Extension de Squntt pour être informé quand ça Stream sa mère.",
   "author": "Alexis DEVLEESCHAUWER",
   "packageManager": "npm@9.5.1",
@@ -11,18 +11,22 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "plasmo": "0.69.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@plasmohq/prettier-plugin-sort-imports": "3.6.4",
     "@types/chrome": "0.0.227",
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
     "prettier": "2.8.7",
-    "typescript": "5.0.3",
-    "@plasmohq/prettier-plugin-sort-imports": "3.6.4"
+    "typescript": "5.0.3"
   },
   "manifest": {
     "host_permissions": [
